tests/fixtures/invalid/divmod_bool_none.py
# Cannot call divmod() with Bool, None
x = divmod(True, None)
